--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 .bg-image {
-  background-image: url("../public/bg-img.jpg");
+  background-image: url("./bg-img.jpg");
   background-size: cover;
 }
 
